--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
   "require": {
     "php": "^7.1",
     "league/climate": "^3.2",
-    "illuminate/support": "^6.0"
+    "illuminate/support": "^6.0|^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^6.2|^8.0"
   },
   "license": "MIT",
   "authors": [
