--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
   "description": "A library to help me output useful debug info during development.",
   "type": "library",
   "require": {
-    "php": "^7.1",
-    "league/climate": "^3.2",
+    "php": "^7.1|^8.0",
+    "league/climate": "^3.0",
     "illuminate/support": "^6.0|^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2|^8.0"
+    "phpunit/phpunit": "^6.2|^8.0|^9.0"
   },
   "license": "MIT",
   "authors": [
